WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120437
[WK2][Mac] WebKitTestRunner doesn't force system appearance
https://bugs.webkit.org/show_bug.cgi?id=120437
Summary
[WK2][Mac] WebKitTestRunner doesn't force system appearance
Alexey Proskuryakov
Reported
2013-08-28 14:08:48 PDT
When system appearance is set to Graphite, WebKitTestRunner respects that, and draws pixel results with a different color. Not sure why these settings were omitted, DumpRenderTree "always" had them.
Attachments
proposed fix
(2.65 KB, patch)
2013-08-28 14:11 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-08-28 14:11:24 PDT
Created
attachment 209922
[details]
proposed fix
WebKit Commit Bot
Comment 2
2013-08-28 23:10:08 PDT
Comment on
attachment 209922
[details]
proposed fix Clearing flags on attachment: 209922 Committed
r154805
: <
http://trac.webkit.org/changeset/154805
>
WebKit Commit Bot
Comment 3
2013-08-28 23:10:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug