[WK2][Mac] WebKitTestRunner doesn't force system appearance https://bugs.webkit.org/show_bug.cgi?id=120437

Reviewed by Darin Adler.

* WebKitTestRunner/InjectedBundle/mac/InjectedBundleMac.mm:
(WTR::InjectedBundle::platformInitialize): Set AppleAquaColorVariant,
AppleHighlightColor and AppleOtherHighlightColor to the same values that DRT uses.
Fixed formatting.


Canonical link: https://commits.webkit.org/138435@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154805 268f45cc-cd09-0410-ab3c-d52691b4dbfc